--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="navigation">
-    <h2 style="color: #ffff;">REST COUNTRIES</h2>
+    <h2 style="color: #ffff;">REST COUNTRIES edited for test</h2>
     <div>
     <form action="#" id="searchForm">
         <input type="search" placeholder="type here to search" id="search" required>
